--- a/IKSim.vcxproj
+++ b/IKSim.vcxproj
@@ -140,23 +140,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="battle.cpp" />
-    <ClCompile Include="config.cpp" />
-    <ClCompile Include="environment.cpp" />
-    <ClCompile Include="log.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="storebox.cpp" />
-    <ClCompile Include="types.cpp" />
+    <ClCompile Include="src\battle.cpp" />
+    <ClCompile Include="src\buffs.cpp" />
+    <ClCompile Include="src\common_types.cpp" />
+    <ClCompile Include="src\config.cpp" />
+    <ClCompile Include="src\log.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\playground_storage.cpp" />
+    <ClCompile Include="src\playground.cpp" />
+    <ClCompile Include="src\playground_types.cpp" />
+    <ClCompile Include="src\runtime_types.cpp" />
+    <ClCompile Include="src\skills.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="analyzer.h" />
-    <ClInclude Include="battle.h" />
-    <ClInclude Include="enums.h" />
-    <ClInclude Include="config.h" />
-    <ClInclude Include="environment.h" />
-    <ClInclude Include="log.h" />
-    <ClInclude Include="storebox.h" />
-    <ClInclude Include="types.h" />
+    <ClInclude Include="src\analyzer.h" />
+    <ClInclude Include="src\battle.h" />
+    <ClInclude Include="src\buffs.h" />
+    <ClInclude Include="src\common_types.h" />
+    <ClInclude Include="src\config.h" />
+    <ClInclude Include="src\enums.h" />
+    <ClInclude Include="src\log.h" />
+    <ClInclude Include="src\playground_storage.h" />
+    <ClInclude Include="src\playground.h" />
+    <ClInclude Include="src\playground_types.h" />
+    <ClInclude Include="src\runtime_types.h" />
+    <ClInclude Include="src\skills.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
